--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "java.import.gradle.enabled": false,
-    "java.import.gradle.wrapper.enabled": false
+    "java.import.gradle.wrapper.enabled": false,
+    "java.test.config": {"workingDirectory": "${workspaceFolder}"}
 }
