--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
             "name": "CodeLens (Launch) - GloriaRomanusApplication",
             "request": "launch",
             "mainClass": "unsw.gloriaromanus.GloriaRomanusApplication",
+            "projectName": "w11b-420_3c5c9740"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - GloriaRomanusApplication",
+            "request": "launch",
+            "mainClass": "unsw.gloriaromanus.GloriaRomanusApplication",
             "projectName": "w11b-420_73be7145"
         },
         {
